@@ -1,3 +1,7 @@
+2003-04-21  Dennis Cranston <dennis_cranston at yahoo com>
+
+	* themes.c:  HIGify the preference dialog.
+
 2003-04-21  Kevin Vandersloot <kfv101@psu.edu>
 
 	* themes.c: fix small memory leak from previous patch. Thanks to Pasupathi
